--- a/ouissem_chikh.qmd
+++ b/ouissem_chikh.qmd
@@ -27,6 +27,58 @@ typeof(iris)
 class(iris)
 ```
 
+##vectors
+
+many things in R are vectores (and most of the other thing are listed)
+a vector=collection of values of the same type (possibily a single value)
+
+```{r}
+x<-15.25
+length(x) ##all vectors have a length
+x(1)
+```
+
+```{r}
+y<-c(1,-2,45,1.5,-1e-10)
+y
+typeof(y)
+y[2]
+length(y)
+```
+```{r}
+c(x,y) #concatenation of vectors
+```
+
+
+###character vectors
+
+this is not R strenght 
+
+```{r}
+z<-"Alice"
+length(z)
+```
+
+salvation comes from the 'stringer' package
+
+
+```{r}
+library(stringr)
+```
+
+```{r}
+str_length(z)
+```
+
+
+
+
+
+
+
+
+
+
 
 
 
