--- a/melina_boukhalfa.qmd
+++ b/melina_boukhalfa.qmd
@@ -31,5 +31,42 @@ Many things in R are vectors (and most of other things are lists). A vector is a
 x<- 15.25
 length(x) #all vectors have a length
 x[1] #access to an element
+typeof(x)
+```
+```{r}
+y<-c(1,-2,45,1.5,-1e-10)
+y
+typeof(y)
+y[2]
+length(y)
+```
+The `c` function can be seen as a creation function or, more accurately, as a vector concatenation function 
+```{r}
+c(x,y)
+```
+## Character vectors
+This is not R strength
+```{r}
+z<-"Alice"
+length(z)
+```
+Salvation comes from the `stingr`package. 
+```{r}
+library(stringr)
 ```
 
+```{r}
+str_length(z)
+```
+```{r}
+complicated<-"🎈🍷💃🎁🎂🎸😀😀😀😀"
+complicated
+length(complicated)
+str_length(complicated)
+```
+```{r}
+some_values<-c("🎈🍷💃🎁🎂🎸😀😀😀😀", x)
+some_values
+length(some_values)
+str_length(some_values)
+```
