--- a/ouissem_chikh.qmd
+++ b/ouissem_chikh.qmd
@@ -74,11 +74,36 @@ str_length(z)
 
  git config pull.rebase false  # merge
  
+assignement can be understood has a value semantic assignement: 'x' and 'y' are different vectors with the same initial content. 
 
 
+```{r}
+
+```
+ 
+ therefore modifying 'x' has no eggect on 'y'
+ 
+```{r}
+x[1]<-18
+x
+y
+```
+ 
 
 
+advanced
 
+indexing is made with vectors of any length
+
+```{r}
+x
+x[c(2,2,1,4,3)]
+```
+
+```{r}
+x[0]
+xÅ
+```
 
 
 
